# ProjectTemplate3

./: .all-contributorsrc  .codecov.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md
.github/workflows/: Linux-Clang.yml  Linux-GCC.yml  Windows-MSVC.yml  Windows-MinGW.yml  macOS.yml
apps/: CMakeLists.txt
cmake/: DownloadCMakeCM.cmake
docs/: Doxyfile.in
include/: Complex.hpp
src/: CMakeLists.txt  Complex.cpp
